--- a/prenotazione/src/app/lista-prenotazione/lista-prenotazione.component.html
+++ b/prenotazione/src/app/lista-prenotazione/lista-prenotazione.component.html
@@ -1,9 +1,11 @@
-<form>
-    {{prenota.nome}}
-    {{prenota.cognome}}
-    {{prenota.indirizzo}}
-    {{prenota.telefono}}
-    {{prenota.email}}
-    {{prenota.data}}
-    {{prenota.ora}}
+<div class = "container">
+<form class="form-group">
+    {{p.nome}}
+    {{p.cognome}}
+    {{p.indirizzo}}
+    {{p.telefono}}
+    {{p.email}}
+    {{p.data}}
+    {{p.ora}}
 </form>
+</div>
