--- a/prenotazione/src/app/lista-prenotazione/lista-prenotazione.component.html
+++ b/prenotazione/src/app/lista-prenotazione/lista-prenotazione.component.html
@@ -1,11 +1,11 @@
 <div class = "container">
 <form class="form-group">
-    {{p.nome}}
+    <li>{{p.nome}}
     {{p.cognome}}
     {{p.indirizzo}}
     {{p.telefono}}
     {{p.email}}
     {{p.data}}
-    {{p.ora}}
+    {{p.ora}}</li>
 </form>
 </div>
