Progetto finito ma manca l'ultimo componente che non funziona

--- a/prenotazione/src/app/visua-prenotazione/visua-prenotazione.component.html
+++ b/prenotazione/src/app/visua-prenotazione/visua-prenotazione.component.html
@@ -1,1 +1,9 @@
-<form></form>
+<ul>
+    <li>{{p.nome}}
+    {{p.cognome}}
+    {{p.indirizzo}}
+    {{p.telefono}}
+    {{p.email}}
+    {{p.data}}
+    {{p.ora}}</li>
+</ul>
